# the-guild

./: .gitignore  CMakeLists.txt  README.md  build.sh  dialogs.json  gather.sh  log.txt  run.sh  savefile.json
data/: adventurer_modifiers.json  classes.json  config.json  dialogs.json  standards.txt  temperatures.json  terrain_types.json  test.json
data/characteristics/: adventurer_modifiers.json  adventurer_names.json  classes.json  monsters.json  races.json  terrain_types.json
include/: Adventurer.hpp  Debug.hpp  FileManager.hpp  Game.hpp  GameExit.hpp  Mission.hpp  MissionResult.hpp  RNG.hpp  Stats.hpp  TheGuild.hpp  WindowManager.hpp  gameUtil.hpp  magicNumbers.hpp
src/: Adventurer.cpp  CMakeLists.txt  Debug.cpp  FileManager.cpp  Game.cpp  Mission.cpp  RNG.cpp  Stats.cpp  TheGuild.cpp  WindowManager.cpp  gameUtil.cpp  gatherer.cpp  main.cpp
